--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+body {
+  background-image: url("../img/gradient_squares.png");
+  background-size: auto;
+  background-repeat: repeat;
+}
+
+td, th {
+  padding: 5px;
+  font-size: 16px;
+}
+
+input[type="checkbox"]{
+  margin-right: 10px;
+}
+
 .btn-primary{
   margin-left: 15px;
 }
@@ -7,8 +22,12 @@
   float: right;
 }
 
-input[type="checkbox"]{
-  margin-right: 10px;
+.boxList {
+  background-color: white;
+  padding: 56px;
+  border-radius: 18px;
+  margin-top: 8%;
+  box-shadow: 1px 1px 15px #e4e3e9;
 }
 
 .done{
@@ -19,3 +38,23 @@ input[type="checkbox"]{
   margin-top: 20px;
   sty
 }
+
+.form-group {
+  width: 100%;
+  display: inline-flex !important;
+}
+
+.form-control {
+  width: 100% !important;
+}
+
+.todoTable {
+  width:100%;
+}
+
+.header {
+  color: #2196f3;
+  padding-top: 1em;
+  font-size: 1.5em;
+}
+
